--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <div class="calculator-grid">
     <div class="output">
-      <div data-previous-operand class="previous-operand">Prev</div>
-      <div data-current-operand class="current-operand">Curr</div>
+      <div data-previous-operand class="previous-operand"></div>
+      <div data-current-operand class="current-operand"></div>
     </div>
     <button data-all-clear class="span-two">AC</button>
     <button data-delete>DEL</button>
@@ -29,7 +29,7 @@
     <button data-number>8</button>
     <button data-number>9</button>
     <button data-operation>-</button>
-    <button data-operation>.</button>
+    <button data-number>.</button>
     <button data-number>0</button>
     <button data-equals class="span-two">=</button>
   </div>
